# rules_dotnet

./: .bazelrc  .gitignore  BUILD.bazel  CHANGELOG.md  CODEOWNERS  CONTRIBUTING.md  MODULE.bazel  README.md  SECURITY.md  VALIDATION_PLAN.md  WORKSPACE  dotnet-tools.json  internal_deps.bzl  paket.dependencies
dotnet/: BUILD.bazel  defs.bzl  extensions.bzl  paket.paket2bazel_dependencies.bzl  paket.paket2bazel_dependencies_extension.bzl  paket.rules_dotnet_dev_nuget_packages.bzl  paket.rules_dotnet_dev_nuget_packages_extension.bzl  paket.rules_dotnet_nuget_packages.bzl  paket.rules_dotnet_nuget_packages_extension.bzl  paket.rules_dotnet_nuget_resource_assemblies_tests.bzl  paket.rules_dotnet_nuget_resource_assemblies_tests_extension.bzl  paket.rules_dotnet_nuget_tool_tests.bzl  paket.rules_dotnet_nuget_tool_tests_extension.bzl  proto.bzl  repositories.bzl  toolchain.bzl
dotnet/private/: BUILD.bazel  common.bzl  compiler_wrapper.bat  compiler_wrapper.sh  launcher.bat.tpl  launcher.sh.tpl  providers.bzl  resolved_toolchain.bzl  semver.bzl  versions.bzl
dotnet/private/macros/: BUILD.bazel  register_rids.bzl  register_tfms.bzl
dotnet/private/rules/analysis/: BUILD.bazel  dotnet_analysis_config.bzl  providers.bzl  resolve.bzl
dotnet/private/rules/common/: BUILD.bazel  attrs.bzl  binary.bzl  copy_dlls.bzl  library.bzl
dotnet/private/rules/csharp/: BUILD.bazel  binary.bzl  library.bzl  nunit_test.bzl  test.bzl
dotnet/private/rules/fsharp/: BUILD.bazel  binary.bzl  library.bzl  nunit_test.bzl  test.bzl
dotnet/private/rules/ide/: BUILD.bazel  dotnet_project.bzl  dotnet_solution.bzl  ide_info_aspect.bzl  providers.bzl
dotnet/private/rules/native_aot/: BUILD.bazel  aot_pack.bzl  native_aot_binary.bzl
dotnet/private/rules/nuget/: BUILD.bazel  dotnet_tool.bzl  imports.bzl  nuget_archive.bzl  nuget_lock.bzl  nuget_repo.bzl  template.BUILD  tool_template.BUILD
dotnet/private/rules/nuget_pack/: BUILD.bazel  dotnet_pack.bzl
dotnet/private/rules/proto/: BUILD.bazel  common.bzl  csharp_grpc_library.bzl  csharp_proto_compiler.bzl  csharp_proto_library.bzl  proto_compile.bzl  well_known_types.bzl
dotnet/private/rules/publish_binary/: BUILD.bazel  publish_binary.bzl
dotnet/private/rules/publish_library/: BUILD.bazel  publish_library.bzl
dotnet/private/rules/razor/: BUILD.bazel  razor_library.bzl  razor_preprocess.bzl
dotnet/private/rules/resx/: BUILD.bazel  resx_resource.bzl
dotnet/private/sdk/: BUILD.bazel  rids.bzl  versions.bzl
dotnet/private/sdk/apphost_packs/: BUILD.bazel  apphost_pack.bzl  apphost_pack_lookup_table.bzl  apphost_pack_transition.bzl  apphost_packs.bzl  dotnet.apphost_packs.bzl  dotnet.apphost_packs_extension.bzl
dotnet/private/sdk/coverlet/: dotnet.coverlet.bzl  dotnet.coverlet_extension.bzl
dotnet/private/sdk/runtime_packs/: BUILD.bazel  (+6 more)
dotnet/private/tests/: BUILD.bazel  utils.bzl
dotnet/private/transitions/: BUILD.bazel  common.bzl  default_transition.bzl  tfm_transition.bzl
dotnet/settings/: BUILD.bazel
e2e/net7.0/: .bazelrc  MODULE.bazel  WORKSPACE.bzlmod  paket.dependencies  paket.main.bzl
e2e/net7.0/basic_csharp/: BUILD.bazel
e2e/net7.0/basic_fsharp/: BUILD.bazel
e2e/net8.0/basic_csharp/: BUILD.bazel
e2e/smoke/: MODULE.bazel  paket.dependencies  paket.main.bzl
e2e/smoke/basic_csharp/: BUILD.bazel
e2e/smoke/basic_fsharp/: BUILD.bazel
e2e/web_sdk/basic_csharp/: BUILD.bazel
e2e/web_sdk/basic_fsharp/: BUILD.bazel
examples/: MODULE.bazel  README.md  WORKSPACE  WORKSPACE.bzlmod  paket.dependencies  paket.example_deps.bzl  paket.example_deps_extension.bzl
examples/aspnetcore/: BUILD.bazel  WeatherForecast.cs  appsettings.json
examples/basic_csharp/: BUILD.bazel
examples/basic_fsharp/: BUILD.bazel  release_mode.fs
examples/expecto/: BUILD.bazel
examples/fsharp_type_provider/: BUILD.bazel
examples/fsharp_type_provider/type_provider_lib/: BUILD.bazel
examples/netstandard2.0/: BUILD.bazel
examples/nuget_hello/: BUILD.bazel  Greeter.cs  GreeterTest.cs  MODULE.bazel  Program.cs  README.md
examples/paket/: BUILD.bazel  paket.dependencies  update-deps.sh
examples/publish_framework_dependent/: BUILD.bazel
examples/publish_self_contained/: BUILD.bazel
examples/runfiles_csharp/: BUILD.bazel  RunfilesTest.cs
examples/runfiles_fsharp/: BUILD.bazel  RunfilesTest.fs
examples/source_generators/generator/: BUILD.bazel
examples/source_generators/generator_usage/: BUILD.bazel
gazelle/dotnet/: BUILD.bazel  config.go  config_test.go  csproj.go  csproj_test.go  generate.go  generate_test.go  lang.go  resolve.go  resolve_test.go
gazelle/dotnet/testdata/: fsharp_library.fsproj  multi_target.csproj  nunit_test.csproj  web_binary.csproj
tests/parity-app/: .bazelrc  .bazelrc.agent  .globalconfig  BUILD.bazel  CLAUDE.md  Clean.cs  Counter.razor  Debuggable.cs  Greeter.cs  Greeter.resx  GreeterTest.cs  ImplicitUsings.cs  MODULE.bazel  NativeConsumer.cs  PackLib.cs  Program.cs  ProtoConsumer.cs  TARGETS.md  Types.fs  Types.fsi  app_runtime_test.sh  appsettings.json  doc.xml  greeting.proto  native_add.c  paket.parity.bzl  paket.parity_extension.bzl  stubs.bzl
tests/parity-app/analysis/: BUILD.bazel
tests/parity-app/correctness/: BUILD.bazel
tests/parity-app/fsharp/: BUILD.bazel
tests/parity-app/ide/: BUILD.bazel
tests/parity-app/integration/: BUILD.bazel
tests/parity-app/native/: BUILD.bazel
tests/parity-app/platform/: BUILD.bazel
tests/parity-app/proto/: BUILD.bazel  ProtoConsumer.cs  greeting.proto
tests/parity-app/publishing/: BUILD.bazel
tests/parity-app/quick_wins/: BUILD.bazel
tests/parity-app/razor/: BUILD.bazel
tests/parity-app/testing/: BUILD.bazel
tools/paket2bazel/: BUILD.bazel  Gen.fs  Main.fs  Models.fs  Paket.fs  README.md  paket2bazel.fsproj
tools/runfiles/: BUILD.bazel  Runfiles.cs  Runfiles.csproj
tools/runfiles/tests/: BUILD.bazel
validation/booking/: .bazelrc  BUILD.bazel  MODULE.bazel  RESULTS.md  paket.booking.bzl  paket.booking_extension.bzl
validation/smoke/: BUILD.bazel  Greeter.cs  GreeterTest.cs  MODULE.bazel  MODULE.bazel.git_override_example  Program.cs
(+328 files in other folders)
