load("@bazel_gazelle//:def.bzl", "gazelle", "gazelle_binary")

package(default_visibility = ["//visibility:public"])

exports_files(["AUTHORS"])

gazelle_binary(
    name = "gazelle_bin",
    languages = ["@bazel_skylib_gazelle_plugin//bzl"],
)

# gazelle:exclude examples
gazelle(
    name = "gazelle",
    gazelle = "gazelle_bin",
)
