load("@bazel_gazelle//:def.bzl", "gazelle", "gazelle_binary")

package(default_visibility = ["//visibility:public"])

gazelle_binary(
    name = "gazelle_bin",
    languages = [
        "//gazelle/dotnet",
        "@bazel_skylib_gazelle_plugin//bzl",
    ],
)

# gazelle:exclude examples
gazelle(
    name = "gazelle",
    gazelle = "gazelle_bin",
)
