"rules_dotnet examples"

module(
    name = "rules_dotnet_examples",
    version = "0.0.0",
    compatibility_level = 1,
)

bazel_dep(name = "rules_dotnet", version = "0.0.0")
local_path_override(
    module_name = "rules_dotnet",
    path = "..",
)

dotnet = use_extension("@rules_dotnet//dotnet:extensions.bzl", "dotnet")
dotnet.toolchain(dotnet_version = "8.0.100")
use_repo(dotnet, "dotnet_toolchains")

register_toolchains("@dotnet_toolchains//:all")

example_deps_extension = use_extension("//:paket.example_deps_extension.bzl", "example_deps_extension")
use_repo(example_deps_extension, "paket.example_deps")

main_extension = use_extension("//paket/deps:paket.main_extension.bzl", "main_extension")
use_repo(main_extension, "paket.main")

othergroup_extension = use_extension("//paket/deps:paket.othergroup_extension.bzl", "othergroup_extension")
use_repo(othergroup_extension, "paket.othergroup")
