load(
    "@rules_dotnet//dotnet:defs.bzl",
    "fsharp_test",
)

fsharp_test(
    name = "expecto_example.dll",
    srcs = [
        # keep order
        "test.fs",
        "main.fs",
    ],
    target_frameworks = ["net6.0"],
    targeting_packs = [
        "@paket.example_deps//microsoft.netcore.app.ref",
    ],
    deps = [
        "@paket.example_deps//expecto",
        "@paket.example_deps//fsharp.core",
    ],
)
