load(
    "@rules_dotnet//dotnet:defs.bzl",
    "fsharp_nunit_test",
)

fsharp_nunit_test(
    name = "fsharp_type_provider",
    srcs = ["Main.fs"],
    target_frameworks = ["net6.0"],
    targeting_packs = [
        "@paket.example_deps//microsoft.netcore.app.ref",
    ],
    deps = [
        "//fsharp_type_provider/type_provider_lib",
        "@paket.example_deps//fsharp.core",
        "@paket.example_deps//fsharp.data",
    ],
)
