load("@rules_dotnet//dotnet:defs.bzl", "csharp_binary", "csharp_library", "csharp_nunit_test")

csharp_library(
    name = "greeter",
    srcs = ["Greeter.cs"],
    target_frameworks = ["net9.0"],
    deps = ["@nuget//newtonsoft.json"],
    visibility = ["//visibility:public"],
)

csharp_binary(
    name = "hello",
    srcs = ["Program.cs"],
    target_frameworks = ["net9.0"],
    deps = [":greeter"],
)

csharp_nunit_test(
    name = "greeter_test",
    srcs = ["GreeterTest.cs"],
    target_frameworks = ["net9.0"],
    deps = [":greeter"],
)
