load(
    "@rules_dotnet//dotnet:defs.bzl",
    "fsharp_nunit_test",
)

fsharp_nunit_test(
    name = "runfiles_test",
    srcs = ["RunfilesTest.fs"],
    data = ["data-file"],
    target_frameworks = ["net6.0"],
    deps = [
        "@paket.example_deps//fsharp.core",
        "@rules_dotnet//tools/runfiles",
    ],
)
