"""Parity test app — per-spec sub-packages with top-level gate.

Each spec has its own sub-package (e.g., //quick_wins, //fsharp) so that
targets from one spec can load and build independently of other specs.
Cross-spec integration targets live in //integration.

Final gate: bazel test //:parity
"""

# Source files shared across sub-packages
exports_files(
    [
        ".globalconfig",
        "Clean.cs",
        "Counter.razor",
        "Debuggable.cs",
        "Greeter.cs",
        "Greeter.resx",
        "GreeterTest.cs",
        "ImplicitUsings.cs",
        "NativeConsumer.cs",
        "PackLib.cs",
        "Program.cs",
        "ProtoConsumer.cs",
        "Types.fs",
        "Types.fsi",
        "app_runtime_test.sh",
        "appsettings.json",
        "config/env/appsettings.Development.json",
        "doc.xml",
        "greeting.proto",
        "native_add.c",
    ],
)

# =============================================================================
# TOP-LEVEL GATE — `bazel test //:parity` is the single pass/fail signal.
# Passes when ALL specs are implemented.
# =============================================================================

test_suite(
    name = "parity",
    tests = [
        "//analysis:build_test",
        "//correctness:build_test",
        "//fsharp:build_test",
        "//ide:build_test",
        "//integration:app_runtime_test",
        "//integration:build_test",
        "//native:build_test",
        "//platform:build_test",
        "//proto:build_test",
        "//publishing:build_test",
        "//quick_wins:build_test",
        "//razor:build_test",
        "//testing:greeter_test",
    ],
)
