load("//dotnet:defs.bzl", "fsharp_binary", "publish_binary")

fsharp_binary(
    name = "paket2bazel_bin",
    srcs = [
        # Keep order
        "Models.fs",
        "Paket.fs",
        "Gen.fs",
        "Main.fs",
    ],
    target_frameworks = ["net8.0"],
    deps = [
        "//dotnet/private/sdk/gen",
        "@paket.paket2bazel_dependencies//argu",
        "@paket.paket2bazel_dependencies//chessie",
        "@paket.paket2bazel_dependencies//fsharp.core",
        "@paket.paket2bazel_dependencies//nuget.frameworks",
        "@paket.paket2bazel_dependencies//nuget.packagemanagement",
        "@paket.paket2bazel_dependencies//nuget.packaging",
        "@paket.paket2bazel_dependencies//nuget.versioning",
        "@paket.paket2bazel_dependencies//paket.core",
        "@paket.paket2bazel_dependencies//system.text.json",
    ],
)

publish_binary(
    name = "paket2bazel",
    binary = ":paket2bazel_bin",
    self_contained = True,
    target_framework = "net8.0",
    visibility = ["//visibility:public"],
)
