"""Booking-microservices validation workspace for rules_dotnet.

Validates that rules_dotnet can express a real-world .NET microservices
application with domain libraries, cross-project references, and NuGet
dependencies targeting net10.0.
"""

module(
    name = "booking_validation",
    version = "0.0.0",
)

# --- rules_dotnet (local development copy) ---
bazel_dep(name = "rules_dotnet", version = "0.0.0")
local_path_override(
    module_name = "rules_dotnet",
    path = "../..",  # rules_dotnet root (2 levels up from validation/booking)
)

# --- Toolchain: .NET 10 SDK (matches booking-microservices target) ---
dotnet = use_extension("@rules_dotnet//dotnet:extensions.bzl", "dotnet")
dotnet.toolchain(dotnet_version = "10.0.100")
use_repo(dotnet, "dotnet_toolchains")

register_toolchains("@dotnet_toolchains//:all")

# --- Build validation ---
bazel_dep(name = "bazel_skylib", version = "1.7.1")

# --- NuGet packages ---
booking_nuget = use_extension("//:paket.booking_extension.bzl", "booking_nuget")
use_repo(booking_nuget, "paket.booking")
