load(
    "@rules_dotnet//dotnet:defs.bzl",
    "csharp_binary",
    "csharp_library",
    "csharp_nunit_test",
)

# bazel run //examples:hello
csharp_binary(
    name = "hello",
    srcs = ["hello.cs"],
    target_frameworks = ["net8.0"],
    deps = [
        ":lib",
    ],
)

csharp_nunit_test(
    name = "lib_test",
    srcs = ["libtest.cs"],
    target_frameworks = ["net8.0"],
    deps = [
        ":lib",
    ],
)

csharp_library(
    name = "lib",
    srcs = ["lib.cs"],
    internals_visible_to = ["lib_test"],
    target_frameworks = ["net8.0"],
    deps = [
        # This package only supports net9.0 and netstandard2.0 TFMs.
        # rules_dotnet should be able to fall back to netstandard2.0.
        "@paket.main//microsoft.net.stringtools",
    ],
)
