load(
    "@rules_dotnet//dotnet:defs.bzl",
    "csharp_binary",
    "csharp_library",
    "csharp_nunit_test",
)

# bazel run //examples:hello
csharp_binary(
    name = "hello",
    srcs = ["hello.cs"],
    project_sdk = "web",
    target_frameworks = ["net10.0"],
    deps = [
        ":lib",
    ],
)

csharp_nunit_test(
    name = "lib_test",
    srcs = ["libtest.cs"],
    project_sdk = "web",
    target_frameworks = ["net10.0"],
    deps = [
        ":lib",
    ],
)

csharp_library(
    name = "lib",
    srcs = ["lib.cs"],
    internals_visible_to = ["lib_test"],
    project_sdk = "web",
    target_frameworks = ["net10.0"],
    deps = [],
)
