load(
    "@rules_dotnet//dotnet:defs.bzl",
    "fsharp_binary",
    "fsharp_library",
    "fsharp_nunit_test",
)

fsharp_binary(
    name = "hello",
    srcs = ["hello.fs"],
    project_sdk = "web",
    target_frameworks = ["net9.0"],
    deps = [
        ":lib",
        "@paket.main//fsharp.core",
    ],
)

fsharp_nunit_test(
    name = "lib_test",
    srcs = ["libtest.fs"],
    project_sdk = "web",
    target_frameworks = ["net9.0"],
    deps = [
        ":lib",
        "@paket.main//fsharp.core",
    ],
)

fsharp_library(
    name = "lib",
    srcs = ["lib.fs"],
    internals_visible_to = ["lib_test"],
    project_sdk = "web",
    target_frameworks = ["net9.0"],
    deps = [
        "@paket.main//fsharp.core",
    ],
)
