"""spec-static-analysis targets — Roslyn analyzer enforcement.

Uses stub rule until spec-static-analysis is implemented.
analyzed_lib uses standard attrs only (no spec-specific attrs needed).
"""

load("@bazel_skylib//rules:build_test.bzl", "build_test")
load("@rules_dotnet//dotnet:defs.bzl", "csharp_library")
load("//:stubs.bzl", "dotnet_analysis_config")

# BEFORE FIX: stub genrule fails with "dotnet_analysis_config is not yet implemented"
dotnet_analysis_config(
    name = "analysis_config",
    analyzers = ["@paket.parity//stylecop.analyzers"],
    global_configs = ["//:.globalconfig"],
    suppressed_diagnostics = ["SA1633"],
    treat_warnings_as_errors = True,
)

# analyzed_lib uses standard csharp_library attrs — always loads
csharp_library(
    name = "analyzed_lib",
    srcs = ["//:Clean.cs"],
    target_frameworks = ["net8.0"],
)

build_test(
    name = "build_test",
    targets = [
        ":analysis_config",
        ":analyzed_lib",
    ],
)
