"""spec-fsharp-enhancements targets — .fsi support, FSharpSourceInfo provider.

These targets test F# enhancements (#500, #315).
"""

load("@bazel_skylib//rules:build_test.bzl", "build_test")
load("@rules_dotnet//dotnet:defs.bzl", "fsharp_library")

# --- #500: .fsi signature files ---
# BEFORE FIX: expected .fs extension, got .fsi (file type not allowed)
fsharp_library(
    name = "fsharp_with_signatures",
    srcs = [
        "//:Types.fsi",
        "//:Types.fs",
    ],
    target_frameworks = ["net8.0"],
    visibility = ["//visibility:public"],
)

# --- #315: FSharpSourceInfo provider ---
# If this dep chain builds, the provider propagation works.
fsharp_library(
    name = "fsharp_consumer",
    srcs = ["//:Types.fs"],
    target_frameworks = ["net8.0"],
    visibility = ["//visibility:public"],
    deps = [":fsharp_with_signatures"],
)

build_test(
    name = "build_test",
    targets = [
        ":fsharp_with_signatures",
        ":fsharp_consumer",
    ],
)
