"""Cross-spec integration targets.

These targets depend on changes from multiple specs. They only build
when all their dependency specs are implemented. Each target cross-cuts
at least 2 specs.

Existing:
- app: quick-wins + native-interop + fsharp-enhancements
- versioned_lib_with_resources: quick-wins + platform-features

New:
- debuggable_app: ide-integration + quick-wins + native-interop
- analyzed_versioned_lib: static-analysis + quick-wins + correctness
- proto_integration_lib: proto-grpc + correctness
- tested_versioned_lib: testing-infra + quick-wins + correctness
- full_app: quick-wins + native + fsharp + correctness + ide + proto (the everything target)
- all_specs_integration: build_test gate over ALL integration targets
"""

load("@bazel_skylib//rules:build_test.bzl", "build_test")
load(
    "@rules_dotnet//dotnet:defs.bzl",
    "csharp_binary",
    "csharp_library",
    "csharp_nunit_test",
)

# =============================================================================
# TIER 1: Existing cross-spec targets (2-3 specs each)
# =============================================================================

# --- spec-quick-wins #490, #526 + spec-correctness #523: app binary ---
# Exercises appsettings directory preservation, runtime loading, and
# runtime dedup of mixed-TFM transitive deps.
csharp_binary(
    name = "app",
    srcs = ["//:Program.cs"],
    appsetting_files = [
        "//:appsettings.json",
        "//:config/env/appsettings.Development.json",
    ],
    target_frameworks = ["net8.0"],
    visibility = ["//visibility:public"],
    deps = [
        "//fsharp:fsharp_consumer",
        "//native:native_interop_lib",
        "//quick_wins:versioned_lib",
    ],
)

# --- spec-platform-features + spec-quick-wins #423: versioned lib with resources ---
# Only buildable after BOTH spec-quick-wins and spec-platform-features are done.
csharp_library(
    name = "versioned_lib_with_resources",
    srcs = ["//:Greeter.cs"],
    resources = ["//platform:greeter_resources"],
    target_frameworks = ["net8.0"],
    version = "2.1.0",
)

# --- Runtime validation: app exits 0 when appsettings are correctly placed ---
sh_test(
    name = "app_runtime_test",
    srcs = ["//:app_runtime_test.sh"],
    data = [":app"],
)

# =============================================================================
# TIER 2: New cross-spec targets (2-3 specs each)
# =============================================================================

# --- spec-ide-integration #228 + spec-quick-wins #423 + spec-native-interop #349 ---
# A versioned binary with pathmap for debugger support that also uses native deps.
# Validates that pathmap, version, and native_deps all compose correctly on a binary.
csharp_binary(
    name = "debuggable_app",
    srcs = ["//:Program.cs"],
    appsetting_files = [
        "//:appsettings.json",
        "//:config/env/appsettings.Development.json",
    ],
    pathmap = {"__EXEC_ROOT__": "."},
    target_frameworks = ["net8.0"],
    version = "1.0.0",
    deps = [
        "//fsharp:fsharp_consumer",
        "//ide:debuggable_lib",
        "//native:native_interop_lib",
        "//quick_wins:versioned_lib",
    ],
)

# --- spec-static-analysis + spec-quick-wins #423 + spec-correctness #436 ---
# A versioned library with implicit usings and analyzer enforcement.
# Validates that analysis_config, version attr, and implicit_usings all compose.
csharp_library(
    name = "analyzed_versioned_lib",
    srcs = ["//:ImplicitUsings.cs"],
    implicit_usings = True,
    target_frameworks = ["net8.0"],
    treat_warnings_as_errors = True,
    version = "3.0.0",
    deps = ["//correctness:implicit_usings"],
)

# --- spec-proto-grpc + spec-correctness #436 ---
# A library that consumes generated proto types and uses implicit usings.
# Validates that protoc codegen output is usable alongside correctness features.
csharp_library(
    name = "proto_integration_lib",
    srcs = ["//:ProtoConsumer.cs"],
    implicit_usings = True,
    target_frameworks = ["net8.0"],
    deps = ["//proto:greeting_csharp_proto"],
)

# --- spec-testing-infra #207,#359 + spec-quick-wins #423 + spec-correctness #436 ---
# An NUnit test against the versioned lib with flatten_deps.
# Validates that testing infrastructure composes with quick-wins and correctness.
csharp_nunit_test(
    name = "tested_versioned_lib",
    srcs = ["//:GreeterTest.cs"],
    flatten_deps = True,
    target_frameworks = ["net8.0"],
    deps = [
        "//correctness:implicit_usings",
        "//quick_wins:versioned_lib",
    ],
)

# =============================================================================
# TIER 3: The "everything" target — maximum cross-spec coverage
# =============================================================================

# --- ALL wave 1-3 specs: the widest integration binary ---
# Depends on outputs from: quick-wins, native-interop, fsharp-enhancements,
# correctness, ide-integration, and proto-grpc. This is the most demanding
# single target — if it builds, 6 specs compose correctly together.
csharp_binary(
    name = "full_app",
    srcs = ["//:Program.cs"],
    appsetting_files = [
        "//:appsettings.json",
        "//:config/env/appsettings.Development.json",
    ],
    pathmap = {"__EXEC_ROOT__": "."},
    target_frameworks = ["net8.0"],
    treat_warnings_as_errors = True,
    version = "99.0.0",
    deps = [
        "//correctness:implicit_usings",
        "//fsharp:fsharp_consumer",
        "//ide:debuggable_lib",
        "//native:native_interop_lib",
        "//proto:proto_consumer",
        "//quick_wins:versioned_lib",
    ],
)

# =============================================================================
# BUILD TEST GATES
# =============================================================================

# Existing gate: core integration targets only
build_test(
    name = "build_test",
    targets = [
        ":app",
        ":versioned_lib_with_resources",
    ],
)

# Final parity gate: ALL integration targets must build.
# This is the single "did everything work together?" signal.
# Only passes when all dependency specs are fully implemented.
build_test(
    name = "all_specs_integration",
    targets = [
        # Tier 1: existing
        ":app",
        ":versioned_lib_with_resources",
        # Tier 2: new cross-spec
        ":debuggable_app",
        ":analyzed_versioned_lib",
        ":proto_integration_lib",
        ":tested_versioned_lib",
        # Tier 3: everything
        ":full_app",
    ],
)
